src/test/deca/context/invalid/Obj/decl-class-int.deca
// Description:
//    Déclaration d'une classe int
//
// Résultat:
//Une autre classe du même nom a déjà été définie
//
class int {}
{}